Fixed the navigation bar alignment

--- a/style.css
+++ b/style.css
@@ -36,9 +36,16 @@
 html {
     scroll-behavior: smooth;
 }
+main {
+  padding-top: 90px; 
+}
+
 section {
     max-width: 900px;
-    margin: auto;
+    margin: 50px;
+}
+.about{
+    top: 150px;
 }
 
 
@@ -86,16 +93,16 @@ section:empty::after {
   opacity: 0.6;
 }
 .navbar{
-    position: absolute;
-    width: 100%;
-    top: 110px;
-    display: flex;
-    gap: 10px;
-    padding: 10px 0;
-    background: #ffffff;
-    border-radius: 40px;
-    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
-    z-index: 1000;
+    nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;   
+  background: white;
+  z-index: 1000;
+}
+
 }
 .navbar a{
     text-decoration: none;
